# dyncord

./: Cargo.toml  README.md
.github/: FUNDING.yml
examples/: 001_basic.rs  002_dynamic_prefixes.rs  003_custom_argument.rs  004_event_handler.rs  005_builtin_help.rs  006_state.rs  007_embeds.rs  008_all_events.rs  009_slash_command.rs  010_slash_custom_argument_type.rs  011_error_handling.rs  013_permissions.rs  015_message_command.rs
src/: aliases.rs  bot.rs  cache.rs  errors.rs  events.rs  handle.rs  lib.rs  state.rs
src/builders/: embeds.rs  mod.rs
src/builtin/: help.rs  mod.rs  permissions.rs
src/builtin/cache/: mod.rs  redis.rs
src/cache/: mod.rs
src/commands/: arguments.rs  context.rs  errors.rs  event.rs  handle.rs  mod.rs  parsing.rs  permissions.rs  prefixes.rs  registration.rs
src/commands/message/: context.rs  mod.rs  routing.rs
src/commands/prefixed/: arguments.rs  context.rs  errors.rs  mod.rs  parsing.rs  prefixes.rs  routing.rs
src/commands/slash/: arguments.rs  context.rs  mod.rs  registration.rs  routing.rs
src/interactions/: errors.rs  mod.rs  permissions.rs  registration.rs
src/interactions/component/: button.rs  context.rs  mod.rs  routing.rs
src/interactions/message/: context.rs  mod.rs  routing.rs
src/interactions/slash/: arguments.rs  context.rs  mod.rs  routing.rs
src/wrappers/actions/: interaction_respond.rs  message_create.rs
src/wrappers/types/: channels.rs  component.rs  message.rs  mod.rs  roles.rs  users.rs
