[package]
name = "dyncord"
version = "0.9.2"
edition = "2024"
authors = ["Nyeki <hello@nyeki.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Nekidev/dyncord"
description = "A high-level, ergonomic, batteries-included Discord bot library for Rust. WIP."

[dependencies]
num = "0.4.3"
rustls = "0.23.37"
thiserror = "2.0.18"
tokio = "1.50.0"
twilight-gateway = { version = "0.17.1", features = ["rustls-webpki-roots", "simd-json", "zlib"] }
twilight-http = { version = "0.17.1", features = ["rustls-webpki-roots", "simd-json"] }
twilight-model = "0.17.1"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }
