[package]
name = "dyncord"
version = "0.13.6"
edition = "2024"
authors = ["Nyeki <hello@nyeki.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Nekidev/dyncord"
description = "A high-level, ergonomic, batteries-included Discord bot library for Rust. WIP."

[dependencies]
bitcode = { version = "0.6.9", optional = true }
num = "0.4.3"
papaya = { version = "0.2.3", optional = true }
redis = { version = "1.0.5", features = [
    "tokio-comp",
    "aio",
    "cluster-async",
    "connection-manager",
], optional = true }
rustls = "0.23.37"
serde = { version = "1.0.228", optional = true }
thiserror = "2.0.18"
tokio = "1.50.0"
twilight-gateway = { version = "0.17.1", features = [
    "rustls-webpki-roots",
    "simd-json",
    "zlib",
] }
twilight-http = { version = "0.17.1", features = [
    "rustls-webpki-roots",
    "simd-json",
] }
twilight-mention = "0.17.0"
twilight-model = "0.17.1"

[dev-dependencies]
chrono = "0.4.44"
redis = { version = "1.0.5", features = ["tokio-comp", "aio", "connection-manager"] }
tokio = { version = "1.50.0", features = ["full"] }

[features]
cache-serde = ["dep:serde"]
cache-bitcode = ["dep:bitcode"]
builtin-cache-redis = ["dep:redis", "cache-bitcode"]
builtin-cache-inmemory = ["dep:papaya"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"] 